# slmlib

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/dev-tools/: Cargo.toml
crates/dev-tools/src/: compare_scores.rs  sml_2_csv.rs
crates/slm-cli/: Cargo.toml
crates/slm-cli/src/: main.rs
dev/: Cargo.toml
dev/src/: compare_scores.rs  lib.rs  sml.rs  sml_2_csv.rs  sml_scores.rs
examples/: compare_scores.rs
files/: Cargo.toml
files/src/: csv.rs  fix.rs  gpx.rs  lib.rs
fixtures/: archie-iom.csv  archie-iom.json  archie-iom.sml  archie-scotland.json  archie-scotland.sml  archie-wales-run.json  archie-wales-run.sml  archie-wales-walk.json  archie-wales-walk.sml  geowizard-iom.json  geowizard-iom.sml  geowizard-norway.json  geowizard-norway.sml  geowizard-scotland.json  geowizard-scotland.sml  geowizard-wales1a.json  geowizard-wales1a.sml  geowizard-wales1b.json  geowizard-wales1b.sml  geowizard-wales2.json  geowizard-wales2.sml  geowizard-wales3.json  geowizard-wales3.sml  geowizard-wales4.json  geowizard-wales4.sml  hiiumaa.json  hiiumaa.sml  muhu.json  muhu.sml  new-forest.json  new-forest.sml  saaremaa.json  saaremaa.sml  schaffhausen.gpx  schaffhausen.json
slm/: Cargo.toml
slm/src/: main.rs
src/: burdell.rs  csv.rs  geo.rs  geo_wizard.rs  geowizard.rs  gpx.rs  lib.rs  linalg.rs  slm.rs  stats.rs  wsg84.rs
src/files/: csv.rs  gpx.rs  lib.rs  mod.rs  sml.rs
