[workspace]
members = ["dev", "files", "slm"]
resolver = "2"

[package]
name = "slmlib"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Straight line missions utilities"
readme = "README.md"
repository = "https://github.com/barbagus/slmlib"

[lib]
name = "slmlib"
path = "src/lib.rs"

[dev-dependencies]
approx = "0.5.1"
files = {path = "files", features = ["sml", "fix"]}

[dependencies]
libm = "0.2.11"
