[workspace]
members = ["crates/slm-cli", "crates/dev-tools"]
resolver = "2"

[package]
name = "slmlib"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Straight line missions utilities"
readme = "README.md"
repository = "https://github.com/barbagus/slmlib"

[lib]
name = "slmlib"
path = "src/lib.rs"

[dependencies]
libm = "0.2.11"
serde = {version = "1.0.215", default-features = false, features = ["derive", "alloc"], optional = true}
serde_json = {version = "1.0.133", optional = true}
xmlparser = {version = "0.13.6", default-features = false, optional = true}

[features]
sml=["dep:serde", "dep:serde_json"]
fix=["dep:serde", "dep:serde_json"]
csv=[]
gpx=["dep:xmlparser"]
serde=["dep:serde"]
default = ["serde"]

[dev-dependencies]
approx = "0.5.1"
serde = {version = "1.0.215", default-features = false, features = ["derive", "alloc"]}
serde_json = {version = "1.0.133"}
