[package]
name = "files"
version = "0.1.0"
edition = "2021"

[lib]
name = "files"
path = "src/lib.rs"

[dependencies]
slmlib = {path = "../"}
xml = {version = "0.8.20", optional = true}
serde = {version="1.0.214", features = ["derive"], optional = true}
serde_json = {version = "1.0.132", optional = true}

[features]
csv = []
gpx = ["dep:xml"]
sml = ["dep:serde", "dep:serde_json"]
fix = ["dep:serde", "dep:serde_json"]