[package]
name = "files"
version = "0.1.0"
edition = "2021"

[lib]
name = "files"
path = "src/lib.rs"

[dependencies]
serde = {version="1.0.214", default-features = false, features = ["derive", "alloc"], optional = true}
serde_json = {version = "1.0.132", optional = true}
slmlib = {path = "../"}
xmlparser = {version = "0.13.6", default-features = false, optional = true}

[features]
csv = []
fix = ["dep:serde", "dep:serde_json"]
gpx = ["dep:xmlparser"]
sml = ["dep:serde", "dep:serde_json"]
